--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,14 @@ homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
   flutter: ">=1.17.0"
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   device_info_plus: ^3.2.2
   flutter:
     sdk: flutter
   flutter_webrtc: ^0.8.4
+  geolocator: ^9.0.0
   http: ^0.13.4
   logging: ^1.0.2
   mqtt_client: ^9.6.5
@@ -22,3 +23,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+
+platforms:
+  web:
+  ios:
+  android:
