--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
   flutter: ">=1.17.0"
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   device_info_plus: ^3.2.2
@@ -22,3 +22,8 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+
+platforms:
+  android:
+  ios:
+  web:
