--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
+  android_id: ^0.0.4
   device_info_plus: ^4.0.2
   flutter:
     sdk: flutter
