--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   device_info_plus: ^4.0.2
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.6
+  flutter_webrtc:
+    git:
+      url: git@github.com:aira/flutter-webrtc.git
+      ref: fix/809
   http: ^0.13.4
   logging: ^1.0.2
   mqtt_client: ^9.6.8
