--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_webrtc: ^0.9.6
   http: ^0.13.4
+  intl: ^0.17.0
   logging: ^1.0.2
   mqtt_client: ^9.6.8
   package_info_plus: ^1.4.3
