build(deps): pin flutter_webrtc commit

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_webrtc:
     git:
       url: git@github.com:aira/flutter-webrtc.git
-      ref: fix/setSpeakerphoneOn
+      ref: d3df2f8e047d90a57481e23dfdec5effbb907485 # fix/setSpeakerphoneOn
   logging: ^1.0.2
 
 dev_dependencies:
