--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 0.0.33
+version: 0.0.34
 homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
@@ -8,17 +8,17 @@ environment:
   sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
-  android_id: ^0.0.4
-  device_info_plus: ^4.0.2
+  android_id: ^0.1.3+1
+  device_info_plus: ^8.0.0
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.6
-  http: ^0.13.4
-  intl: ^0.17.0
-  logging: ^1.0.2
-  mqtt_client: ^9.6.8
-  package_info_plus: ^1.4.3
-  pubnub: ^4.2.1
+  flutter_webrtc: ^0.9.19
+  http: ^0.13.5
+  intl: ^0.18.0
+  logging: ^1.1.0
+  mqtt_client: ^9.7.4
+  package_info_plus: ^3.0.2
+  pubnub: ^4.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.1
