--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   logging: ^1.1.0
+  meta: ^1.8.0
   mqtt_client: ^9.7.4
   package_info_plus: ^3.0.2
   pubnub: ^4.2.2
