--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   android_id: ^0.1.3+1
+  connectivity_plus: ^3.0.3
   device_info_plus: ^8.0.0
   flutter:
     sdk: flutter
