--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 1.0.2
+version: 1.1.0
 homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   android_id: ^0.1.3+1
+  connectivity_plus: ^3.0.3
   device_info_plus: ^8.0.0
   flutter:
     sdk: flutter
