--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 1.1.1
+version: 1.2.0
 homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
@@ -11,6 +11,7 @@ dependencies:
   android_id: ^0.1.3+1
   connectivity_plus: ^3.0.3
   device_info_plus: ^8.0.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_webrtc: ^0.9.19
