--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
     sdk: flutter
   flutter_webrtc: ^0.9.19
   http: ^0.13.5
-  intl: ^0.17.0
+  intl: any
   logging: ^1.1.0
   meta: ^1.8.0
   mqtt_client: ^9.8.0
