--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,18 @@ environment:
 
 dependencies:
   android_id: ^0.1.3+1
-  connectivity_plus: ^3.0.3
-  device_info_plus: ^8.0.0
+  connectivity_plus: ^4.0.0
+  device_info_plus: ^9.0.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.19
-  http: ^0.13.5
+  flutter_webrtc: ^0.9.30+hotfix.1
+  http: ^0.13.6
   intl: any
   logging: ^1.1.0
   meta: ^1.8.0
   mqtt_client: ^9.8.0
-  package_info_plus: ^3.0.2
+  package_info_plus: ^4.0.0
   pubnub: ^4.2.2
 
 dev_dependencies:
