--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 1.4.1
+version: 1.4.2
 homepage: https://github.com/aira-collab/flutter_aira
 
 environment:
   flutter: ">=3.0.0"
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">3.0.0"
 
 dependencies:
   android_id: ^0.1.3+1
@@ -14,17 +14,17 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.19
+  flutter_webrtc: ^0.9.36
   http: ^0.13.5
   intl: any
-  logging: ^1.1.0
+  logging: ^1.2.0
   meta: ^1.8.0
   mqtt_client: ^9.8.0
   package_info_plus: ^3.0.2
   pubnub: ^4.2.2
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   flutter_test:
     sdk: flutter
 
