--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.36
+  flutter_webrtc: ^0.9.40
   http: ^0.13.5
-  intl: any
+  intl: ^0.18.1
   logging: ^1.2.0
   meta: ^1.8.0
   mqtt_client: ^9.8.0
