--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,23 +8,23 @@ environment:
   sdk: ">3.0.0"
 
 dependencies:
-  android_id: ^0.1.3+1
-  connectivity_plus: ^3.0.3
-  device_info_plus: ^8.0.0
+  android_id: ^0.3.6
+  connectivity_plus: ^5.0.2
+  device_info_plus: ^8.2.2
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_webrtc: ^0.9.47
-  http: ^0.13.5
-  intl: ^0.18.1
+  http: ^0.13.6
+  intl: ^0.19.0
   logging: ^1.2.0
-  meta: ^1.8.0
-  mqtt_client: ^9.8.0
-  package_info_plus: ^3.0.2
+  meta: 1.10.0 # meta is pinned to version 1.10.0 by flutter_test from the flutter SDK.
+  mqtt_client: ^10.0.0
+  package_info_plus: ^5.0.1
   pubnub: ^4.3.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 
