--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 1.13.0
+version: 1.13.1
 homepage: https://github.com/aira/flutter_aira
 
 environment:
@@ -14,12 +14,12 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.9.47
-  http: ^0.13.6
+  flutter_webrtc: ^0.9.48+hotfix.1
+  http: ^1.2.0
   intl: ^0.19.0
   logging: ^1.2.0
-  meta: 1.10.0 # meta is pinned to version 1.10.0 by flutter_test from the flutter SDK.
-  mqtt_client: ^10.0.1
+  meta: ^1.11.0
+  mqtt_client: ^10.1.0
   package_info_plus: ^5.0.1
   pubnub: ^4.3.2
 
