--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_webrtc: ^0.9.48+hotfix.1
   http: ^1.2.0
+  meta: ^1.10.0
   intl: ^0.19.0
   logging: ^1.2.0
   mqtt_client: ^10.1.0
