--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 
   flutter_aira:
     path: ../
-  flutter_webrtc: ^0.9.47
+  flutter_webrtc: ^0.9.48+hotfix.1
   logging: ^1.2.0
 
 dev_dependencies:
