--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   http: ^1.2.0
   intl: ^0.19.0
   logging: ^1.2.0
+  meta: ^1.11.0
   mqtt_client: ^10.2.0
   package_info_plus: ^5.0.1
   pubnub: ^4.3.2
