--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   android_id: ^0.3.6
+  collection: ^1.18.0
   connectivity_plus: ^5.0.2
   device_info_plus: ^9.1.1
   equatable: ^2.0.5
