fixing the sentry issue 'Unable to RTCPeerConnection::addCandidate: Error The remote description was null'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   logging: ^1.2.0
   meta: ^1.10.0
   mqtt_client: ^10.2.0
+  mutex: ^3.1.0
   package_info_plus: ^5.0.1
   pubnub: ^4.3.2
 
