--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 2.9.0
+version: 2.9.1
 homepage: https://github.com/aira/flutter_aira
 
 environment:
@@ -21,6 +21,7 @@ dependencies:
   logging: ^1.2.0
   meta: ^1.12.0
   mqtt_client: ^10.2.0
+  mutex: ^3.1.0
   package_info_plus: ^8.0.0
   pubnub: ^4.3.2
 
