--- a/.github/workflows/ci_workflow.yml
+++ b/.github/workflows/ci_workflow.yml
@@ -39,7 +39,7 @@ jobs:
 
       # Run Flutter Analyze
       - name: Flutter Analyze
-        run: flutter analyze --no-fatal-infos --no-fatal-warnings
+        run: flutter analyze --no-fatal-infos --no-fatal-warnings .
 
       # Run Flutter Tests
       - name: Run Flutter Tests
