--- a/.github/actions/install_dependencies/action.yml
+++ b/.github/actions/install_dependencies/action.yml
@@ -4,9 +4,6 @@ inputs:
   private-key:
     required: true
     description: "SSH private key"
-  build-number:
-    required: true
-    description: "Build number offset"
 
 
 runs:
@@ -21,7 +18,7 @@ runs:
     - name: Add ssh key
       uses: webfactory/ssh-agent@v0.9.0
       with:
-        ssh-private-key: ${{ inputs.private-key }}
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Setup Flutter
       id: flutter-step
