--- a/.github/actions/install_dependencies/action.yml
+++ b/.github/actions/install_dependencies/action.yml
@@ -18,7 +18,7 @@ runs:
     - name: Add ssh key
       uses: webfactory/ssh-agent@v0.9.0
       with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-private-key: ${{ inputs.private-key }}
 
     - name: Setup Flutter
       id: flutter-step
