return key check

--- a/.github/actions/install_dependencies/action.yml
+++ b/.github/actions/install_dependencies/action.yml
@@ -15,10 +15,10 @@ runs:
         echo "BUILD_NUMBER=$((${{ inputs.build-number }}))" >> $GITHUB_ENV
         git config --global core.compression 0
 
-#    - name: Add ssh key
-#      uses: webfactory/ssh-agent@v0.9.0
-#      with:
-#        ssh-private-key: ${{ inputs.private-key }}
+    - name: Add ssh key
+      uses: webfactory/ssh-agent@v0.9.0
+      with:
+        ssh-private-key: ${{ inputs.private-key }}
 
     - name: Setup Flutter
       id: flutter-step
