--- a/.github/actions/install_dependencies/action.yml
+++ b/.github/actions/install_dependencies/action.yml
@@ -26,3 +26,13 @@ runs:
         channel: stable
         flutter-version-file: pubspec.yaml
         cache: true
+
+    - name: Cache Flutter dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.pub-cache
+          .dart_tool
+        key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-flutter-
