--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 2.16.1
+version: 2.17.0
 homepage: https://github.com/aira/flutter_aira
 
 environment:
-  flutter: ">=3.0.0"
+  flutter: "3.24.1"
   sdk: ">3.0.0"
 
 dependencies:
