--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_aira
 description: The Aira Flutter SDK.
-version: 2.21.0
+version: 2.21.1
 homepage: https://github.com/aira/flutter_aira
 
 environment:
@@ -15,7 +15,7 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.10.6
+  flutter_webrtc: 0.10.6
   http: ^1.2.0
   intl: ^0.19.0
   logging: ^1.2.0
@@ -23,6 +23,7 @@ dependencies:
   mqtt_client: ^10.2.0
   mutex: ^3.1.0
   package_info_plus: ^8.0.0
+  webrtc_interface: 1.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1
