--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   mqtt_client: ^10.2.0
   mutex: ^3.1.0
   package_info_plus: ^8.0.0
-  webrtc_interface: 1.2.0
+  webrtc_interface: ">=1.2.0"
 
 dev_dependencies:
   flutter_lints: ^3.0.1
